[package]
name = "usb-host"
version = "0.1.0"
authors = ["Aavin Fernando <aavin.fernando@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp-hal = { version = ">=0.16", features = ["esp32s3"] }
esp-backtrace = { version = "0.11.0", features = ["esp32s3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32s3", "log"] }
log = { version = "0.4.20" }
usb-device = "0.3.2"
embassy-util = "0.0.0"
embassy-time = "0.3.0"

